fix(shared): button max height, fix(widgets): center align

--- a/src/shared/ui/Button/Button.module.css
+++ b/src/shared/ui/Button/Button.module.css
@@ -6,6 +6,7 @@
   color: var(--white);
   border: 2px solid var(--primary);
   cursor: pointer;
+  max-height: 48px;
 }
 
 .secondary {
