--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -3,6 +3,7 @@
   font-weight: 500;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 32px;
   position: fixed;
   top: 0;
